--- a/frontend/scss/style.scss
+++ b/frontend/scss/style.scss
@@ -1740,7 +1740,7 @@ footer {
                 p {
                     width: 160px;
                     height: 64px;
-                    background-image: url(../img/footer_logo.jpg);
+                    background-image: url(../img/footer_logo.png);
                     @include mobile-screen($iPad_M_width) {
                         width: 40px;
                     }
